web profile update 1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 
+
     <div class="main-container">
         <div class="aside">
             <div class="logo">
@@ -22,17 +23,15 @@
             <ul class="nav">
                 <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#"><i class="fa fa-list"></i>Skill</a></li>
-                <li><a href="#"><i class="fa fa-briefcase"></i>Services</a></li>
-                <li><a href="#"><i class="fa fa-envelope"></i>Project</a></li>
+                <li><a href="#"><i class="fa fa-list"></i>Assigment</a></li>
+                <li><a href="#"><i class="fa fa-briefcase"></i>Project</a></li>
                 <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
-
 <!--            <div class="copyright-text">-->
 <!--            </div>-->
         </div>
         <div class="main-content">
-            <section class="home section">
+            <section class="home section ">
                 <div class="container">
                     <div class="intro">
                         <img src="assets/img/WhatsApp%20Image%202021-03-28%20at%205.35.57%20AM.png" alt="profile" class="shadow-dark">
@@ -47,8 +46,237 @@
                     </div>
                 </div>
             </section>
+
+
+            <section class="about section ">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>About Me</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="about-content padd-15">
+                            <div class="row">
+                                <div class="about-text padd-15">
+                                    <h3>Hello, I'am Tharindu Dilshan</h3>
+                                    <p> Hello, I’m Tharindu Dilshan.I am a Devolper and also a Designer. I always tend to provide my best
+                                        to my Clients through dilevering high quality products which will help them to use those products
+                                        with no confusion and high confidence.</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="personal-info padd-15">
+                                    <div class="row">
+                                        <div class="info-item padd-15">
+                                            <p>Birthday : <span>26 February 1999</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Age : <span>22</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Email : <span>tahrindu0414@gmail.com</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Web Site : <span>ww.domain.com</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Phone No : <span>+94 74 11 47 904</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>City : <span>Galle</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Country : <span>Sri Lanka</span></p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="buttons padd-15">
+                                            <a href="" class="btn">Download</a>
+                                            <a href="" class="btn">Hire Me</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skills padd-15">
+                                    <div class="row">
+                                        <div class="skill-item padd-15">
+                                            <h5>Java</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 95%"></div>
+                                                <div class="skills-percent">95%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>Javascript</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 65%"></div>
+                                                <div class="skills-percent">65%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>Html</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 85%"></div>
+                                                <div class="skills-percent">85%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>Css</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 95%"></div>
+                                                <div class="skills-percent">95%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>Boostrap</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 75%"></div>
+                                                <div class="skills-percent">75%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="education padd-15">
+                                    <h3 class="title">Education</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="fa fa-calendar"> 2020 </i>
+                                                    </h6>
+                                                    <h4 class="timeline-title"> GDSE Diploma </h4>
+                                                    <p class="timeline-text">Institute of software Engineering</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="fa fa-calendar"> 2019 </i>
+                                                    </h6>
+                                                    <h4 class="timeline-title"> Electrical Engineering </h4>
+                                                    <p class="timeline-text">Open University</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="fa fa-calendar"> 2007-2018 </i>
+                                                    </h6>
+                                                    <h4 class="timeline-title"> Higher Education </h4>
+                                                    <p class="timeline-text">Mahinda College Galle</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="fa fa-calendar"> 2004-2007 </i>
+                                                    </h6>
+                                                    <h4 class="timeline-title"> Primary Education </h4>
+                                                    <p class="timeline-text">Polpagoda darmapala m.v</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="experience padd-15">
+                                    <h3 class="title">Experience</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="fa fa-calendar"> ##</i>
+                                                    </h6>
+                                                    <h4 class="timeline-title"> ##</h4>
+                                                    <p class="timeline-text"> ##</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="fa fa-calendar"> ## </i>
+                                                    </h6>
+                                                    <h4 class="timeline-title"> ## </h4>
+                                                    <p class="timeline-text"> ##</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="fa fa-calendar"> ##</i>
+                                                    </h6>
+                                                    <h4 class="timeline-title"> ## </h4>
+                                                    <p class="timeline-text"> ##</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h6 class="timeline-date">
+                                                        <i class="fa fa-calendar"> ## </i>
+                                                    </h6>
+                                                    <h4 class="timeline-title"> ## </h4>
+                                                    <p class="timeline-text"> ##</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+            <section class="assigment section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Assigment</h2>
+                        </div>
+                    </div>
+                   <div class="row">
+                       <div class="assigment-item padd-15">
+                           <div class="assigment-item-inner">
+                               <div class="icon"><i class="fa fa-laptop"></i></div>
+                               <h4>Java</h4>
+                               <p>Lorem Ipsum is simply dummy text of the prinring and typesetting industry lorem ipsum</p>
+                           </div>
+                       </div>
+                       <div class="assigment-item padd-15">
+                           <div class="assigment-item-inner">
+                               <div class="icon"><i class="fa fa-laptop"></i></div>
+                               <h4>Java</h4>
+                               <p>Lorem Ipsum is simply dummy text of the prinring and typesetting industry lorem ipsum</p>
+                           </div>
+                       </div>
+                       <div class="assigment-item padd-15">
+                           <div class="assigment-item-inner">
+                               <div class="icon"><i class="fa fa-laptop"></i></div>
+                               <h4>java</h4>
+                               <p>Lorem Ipsum is simply dummy text of the prinring and typesetting industry lorem ipsum</p>
+                           </div>
+                       </div>
+                       <div class="assigment-item padd-15">
+                           <div class="assigment-item-inner">
+                               <div class="icon"><i class="fa fa-laptop"></i></div>
+                               <h4>Java</h4>
+                               <p>Lorem Ipsum is simply dummy text of the prinring and typesetting industry lorem ipsum</p>
+                           </div>
+                       </div>
+                       <div class="assigment-item padd-15">
+                           <div class="assigment-item-inner">
+                               <div class="icon"><i class="fa fa-laptop"></i></div>
+                               <h4>Java</h4>
+                               <p>Lorem Ipsum is simply dummy text of the prinring and typesetting industry lorem ipsum</p>
+                           </div>
+                       </div>
+                   </div>
+                </div>
+            </section>
         </div>
     </div>
-
 </body>
 </html>
+
+
