web profile update 3

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="assets/css/css_color.css" rel="stylesheet">
-    <link href="assets/css/Css%20pink.css" rel="stylesheet">
-</head>
+    </head>
 <body>
 
 
@@ -28,10 +27,11 @@
                 <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
 <!--            <div class="copyright-text">-->
+<!--                2021 new Update-->
 <!--            </div>-->
         </div>
         <div class="main-content">
-            <section class="home section ">
+            <section class="home section  ">
                 <div class="container">
                     <div class="intro">
                         <img src="assets/img/WhatsApp%20Image%202021-03-28%20at%205.35.57%20AM.png" alt="profile" class="shadow-dark">
@@ -48,7 +48,7 @@
             </section>
 
 
-            <section class="about section ">
+            <section class="about section  ">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -228,7 +228,7 @@
             </section>
 
 
-            <section class="assigment section">
+            <section class="assigment section ">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -272,6 +272,122 @@
                            </div>
                        </div>
                    </div>
+                </div>
+            </section>
+
+
+            <section class="assigment section ">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Project</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="assigment-item padd-15">
+                            <div class="assigment-item-inner">
+                                <div class="icon"><i class="fa fa-laptop"></i></div>
+                                <h4>Java</h4>
+                                <p>Lorem Ipsum is simply dummy text of the prinring and typesetting industry lorem ipsum</p>
+                            </div>
+                        </div>
+                        <div class="assigment-item padd-15">
+                            <div class="assigment-item-inner">
+                                <div class="icon"><i class="fa fa-laptop"></i></div>
+                                <h4>Java</h4>
+                                <p>Lorem Ipsum is simply dummy text of the prinring and typesetting industry lorem ipsum</p>
+                            </div>
+                        </div>
+                        <div class="assigment-item padd-15">
+                            <div class="assigment-item-inner">
+                                <div class="icon"><i class="fa fa-laptop"></i></div>
+                                <h4>java</h4>
+                                <p>Lorem Ipsum is simply dummy text of the prinring and typesetting industry lorem ipsum</p>
+                            </div>
+                        </div>
+                        <div class="assigment-item padd-15">
+                            <div class="assigment-item-inner">
+                                <div class="icon"><i class="fa fa-laptop"></i></div>
+                                <h4>Java</h4>
+                                <p>Lorem Ipsum is simply dummy text of the prinring and typesetting industry lorem ipsum</p>
+                            </div>
+                        </div>
+                        <div class="assigment-item padd-15">
+                            <div class="assigment-item-inner">
+                                <div class="icon"><i class="fa fa-laptop"></i></div>
+                                <h4>Java</h4>
+                                <p>Lorem Ipsum is simply dummy text of the prinring and typesetting industry lorem ipsum</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+            <section class="contact section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Contact Me</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-phone"></i></div>
+                            <h4>Call Us On</h4>
+                            <p>+94 74 11 47 904</p>
+                        </div>
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-map-marker"></i></div>
+                            <h4>Location</h4>
+                            <p>Ranjana 33/B, Akurassa Road, Yakkalamulla</p>
+                        </div>
+                        <div class="contact-info-item padd-15">
+                            <div class="icon"><i class="fa fa-envelope"></i></div>
+                            <h4>Email</h4>
+                            <p>tharindugamage0414@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <form class="contact-form padd-15">
+                            <div class="row">
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                        <input type="text" class="from-control" placeholder="Name">
+                                    </div>
+                                </div>
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                        <input type="text" class="from-control" placeholder="Email">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                        <input type="text" class="from-control" placeholder="Phone No">
+                                    </div>
+                                </div>
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                        <input type="text" class="from-control" placeholder="Subject">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-item col-12 padd-15">
+                                    <div class="form-group">
+                                        <textarea class="from-control" placeholder="Your Message...."></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12 padd-15">
+                                   <button type="submit" class="btn">Send Message</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </section>
         </div>
