--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
-                <li><a href="#"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#"><i class="fa fa-list"></i>Assigment</a></li>
-                <li><a href="#"><i class="fa fa-briefcase"></i>Project</a></li>
-                <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
+                <li><a href="#" class="active"><i class="fa fa-home"></i>&nbsp; Home</a></li>
+                <li><a href="#"><i class="fa fa-user"></i>&nbsp; About</a></li>
+                <li><a href="#"><i class="fa fa-code"></i>&nbsp; Skills</a></li>
+                <li><a href="#"><i class="fa fa-list"></i>&nbsp; Assigment</a></li>
+                <li><a href="#"><i class="fa fa-briefcase"></i>&nbsp; Project</a></li>
+                <li><a href="#"><i class="fa fa-comments"></i>&nbsp; Contact</a></li>
             </ul>
 <!--            <div class="copyright-text">-->
 <!--                2021 new Update-->
@@ -97,52 +98,13 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="skills padd-15">
-                                    <div class="row">
-                                        <div class="skill-item padd-15">
-                                            <h5>Java</h5>
-                                            <div class="progress">
-                                                <div class="progress-in" style="width: 95%"></div>
-                                                <div class="skills-percent">95%</div>
-                                            </div>
-                                        </div>
-                                        <div class="skill-item padd-15">
-                                            <h5>Javascript</h5>
-                                            <div class="progress">
-                                                <div class="progress-in" style="width: 65%"></div>
-                                                <div class="skills-percent">65%</div>
-                                            </div>
-                                        </div>
-                                        <div class="skill-item padd-15">
-                                            <h5>Html</h5>
-                                            <div class="progress">
-                                                <div class="progress-in" style="width: 85%"></div>
-                                                <div class="skills-percent">85%</div>
-                                            </div>
-                                        </div>
-                                        <div class="skill-item padd-15">
-                                            <h5>Css</h5>
-                                            <div class="progress">
-                                                <div class="progress-in" style="width: 95%"></div>
-                                                <div class="skills-percent">95%</div>
-                                            </div>
-                                        </div>
-                                        <div class="skill-item padd-15">
-                                            <h5>Boostrap</h5>
-                                            <div class="progress">
-                                                <div class="progress-in" style="width: 75%"></div>
-                                                <div class="skills-percent">75%</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
 
                             <div class="row">
                                 <div class="education padd-15">
                                     <h3 class="title">Education</h3>
                                     <div class="row">
-                                        <div class="timeline-box padd-15">
+                                        <div class="timeline-box padd-15 padd-top" >
                                             <div class="timeline shadow-dark">
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
@@ -183,7 +145,7 @@
                                 <div class="experience padd-15">
                                     <h3 class="title">Experience</h3>
                                     <div class="row">
-                                        <div class="timeline-box padd-15">
+                                        <div class="timeline-box padd-15 padd-top">
                                             <div class="timeline shadow-dark">
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
@@ -227,6 +189,62 @@
                 </div>
             </section>
 
+
+            <section class="skills section ">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Skills</h2>
+                        </div>
+                    </div>
+                    <div class="skills padd-15">
+                        <div class="row">
+                            <div class="skill-item padd-15">
+                                <h5>Java</h5>
+                                <div class="progress">
+                                    <span class="bar"><span class="java"></span></span>
+                                </div>
+                            </div>
+                            <div class="skill-item padd-15">
+                                <h5>Javascript</h5>
+                                <div class="progress">
+                                    <span class="bar"><span class="javascript"></span></span>
+                                </div>
+                            </div>
+                            <div class="skill-item padd-15">
+                                <h5>Html</h5>
+                                <div class="progress">
+                                    <span class="bar"><span class="html"></span></span>
+                                </div>
+                            </div>
+                            <div class="skill-item padd-15">
+                                <h5>Css</h5>
+                                <div class="progress">
+                                    <span class="bar"><span class="css"></span></span>
+                                </div>
+                            </div>
+                            <div class="skill-item padd-15">
+                                <h5>Boostrap</h5>
+                                <div class="progress">
+                                    <span class="bar"><span class="boostrap"></span></span>
+                                </div>
+                            </div>
+                            <div class="skill-item padd-15">
+                                <h5>Mysql</h5>
+                                <div class="progress">
+                                    <span class="bar"><span class="mysql"></span></span>
+                                </div>
+                            </div>
+                            <div class="skill-item padd-15">
+                                <h5>Git</h5>
+                                <div class="progress">
+                                    <span class="bar"><span class="git"></span></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <section class="assigment section ">
                 <div class="container">
