web profile update 5

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             </div>
             <ul class="nav">
                 <li><a href="#" class="active"><i class="fa fa-home"></i>&nbsp; Home</a></li>
-                <li><a href="#"><i class="fa fa-user"></i>&nbsp; About</a></li>
+                <li><a href="#"><i class="fa fa-user"></i> &nbsp; About</a></li>
                 <li><a href="#"><i class="fa fa-code"></i>&nbsp; Skills</a></li>
-                <li><a href="#"><i class="fa fa-list"></i>&nbsp; Assigment</a></li>
+                <li><a href="#"><i class="fa fa-list"></i>&nbsp Assigment</a></li>
                 <li><a href="#"><i class="fa fa-briefcase"></i>&nbsp; Project</a></li>
                 <li><a href="#"><i class="fa fa-comments"></i>&nbsp; Contact</a></li>
             </ul>
@@ -98,6 +98,10 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="my-photo padd-15">
+                                    <img src="assets/img/WhatsApp%20Image%202021-03-28%20at%207.50.51%20PM.jpeg" alt="">
+                                </div>
+
                             </div>
 
                             <div class="row">
@@ -410,6 +414,10 @@
             </section>
         </div>
     </div>
+
+
+
+<script src="assets/js/script.js"></script>
 </body>
 </html>
 
