--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a href="#" class="active"><i class="fa fa-home"></i>&nbsp; Home</a></li>
-                <li><a href="#"><i class="fa fa-user"></i> &nbsp; About</a></li>
-                <li><a href="#"><i class="fa fa-code"></i>&nbsp; Skills</a></li>
-                <li><a href="#"><i class="fa fa-list"></i>&nbsp Assigment</a></li>
-                <li><a href="#"><i class="fa fa-briefcase"></i>&nbsp; Project</a></li>
-                <li><a href="#"><i class="fa fa-comments"></i>&nbsp; Contact</a></li>
+                <li><a href="#home" class="active"><i class="fa fa-home"></i>&nbsp; Home</a></li>
+                <li><a href="#about"><i class="fa fa-user"></i> &nbsp; About</a></li>
+                <li><a href="#skills"><i class="fa fa-code"></i>&nbsp; Skills</a></li>
+                <li><a href="#assigment"><i class="fa fa-list"></i>&nbsp Assigment</a></li>
+                <li><a href="#project"><i class="fa fa-briefcase"></i>&nbsp; Project</a></li>
+                <li><a href="#contact"><i class="fa fa-comments"></i>&nbsp; Contact</a></li>
             </ul>
 <!--            <div class="copyright-text">-->
 <!--                2021 new Update-->
 <!--            </div>-->
         </div>
         <div class="main-content">
-            <section class="home section  ">
+            <section class="home section active" id="home">
                 <div class="container">
                     <div class="intro">
                         <img src="assets/img/WhatsApp%20Image%202021-03-28%20at%205.35.57%20AM.png" alt="profile" class="shadow-dark">
@@ -49,7 +49,7 @@
             </section>
 
 
-            <section class="about section  ">
+            <section class="about section " id="about">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -194,7 +194,7 @@
             </section>
 
 
-            <section class="skills section ">
+            <section class="skills section " id="skills">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -250,7 +250,7 @@
                 </div>
             </section>
 
-            <section class="assigment section ">
+            <section class="assigment section " id="assigment">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -298,7 +298,7 @@
             </section>
 
 
-            <section class="assigment section ">
+            <section class="assigment section " id="project">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -346,7 +346,7 @@
             </section>
 
 
-            <section class="contact section">
+            <section class="contact section" id="contact">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -414,8 +414,20 @@
             </section>
         </div>
     </div>
-
-
+    <div class="style-switcher">
+        <div class="toggle-style-switcher">
+            <i class="fa fa-cog fa-spin"></i>
+        </div>
+        <h5>Body Skin</h5>
+        <label>
+            <input type="radio" class="body-skin" name="body-style" value="light" checked=""true>
+            light
+        </label>
+        <label>
+            <input type="radio" class="body-skin" name="body-style" value="dark">
+            dark
+        </label>
+    </div>
 
 <script src="assets/js/script.js"></script>
 </body>
