web profile update 6

--- a/index.html
+++ b/index.html
@@ -7,29 +7,36 @@
 
     <link href="assets/css/css_color.css" rel="stylesheet">
     </head>
+
 <body>
 
-
+    <div class="preloader">
+        <h1>LORDING...</h1>
+        <div class="loader">
+        </div>
+    </div>
     <div class="main-container">
         <div class="aside">
-            <div class="logo">
-                <a href="#">Dilshan</a>
-            </div>
+            <div class="aside-inner">
+                <div class="logo">
+                    <a href="#">Dilshan</a>
+                </div>
 
-            <div class="nav-toggle">
-                <span></span>
+                <div class="nav-toggle">
+                    <span></span>
+                </div>
+                <ul class="nav">
+                    <li><a href="#home" class="active"><i class="fa fa-home"></i>&nbsp; Home</a></li>
+                    <li><a href="#about"><i class="fa fa-user"></i> &nbsp; About</a></li>
+                    <li><a href="#skills"><i class="fa fa-code"></i>&nbsp; Skills</a></li>
+                    <li><a href="#assigment"><i class="fa fa-list"></i>&nbsp Assigment</a></li>
+                    <li><a href="#project"><i class="fa fa-briefcase"></i>&nbsp; Project</a></li>
+                    <li><a href="#contact"><i class="fa fa-comments"></i>&nbsp; Contact</a></li>
+                </ul>
+                <!--            <div class="copyright-text">-->
+                <!--                2021 new Update-->
+                <!--            </div>-->
             </div>
-            <ul class="nav">
-                <li><a href="#home" class="active"><i class="fa fa-home"></i>&nbsp; Home</a></li>
-                <li><a href="#about"><i class="fa fa-user"></i> &nbsp; About</a></li>
-                <li><a href="#skills"><i class="fa fa-code"></i>&nbsp; Skills</a></li>
-                <li><a href="#assigment"><i class="fa fa-list"></i>&nbsp Assigment</a></li>
-                <li><a href="#project"><i class="fa fa-briefcase"></i>&nbsp; Project</a></li>
-                <li><a href="#contact"><i class="fa fa-comments"></i>&nbsp; Contact</a></li>
-            </ul>
-<!--            <div class="copyright-text">-->
-<!--                2021 new Update-->
-<!--            </div>-->
         </div>
         <div class="main-content">
             <section class="home section active" id="home">
@@ -90,11 +97,11 @@
                                         <div class="info-item padd-15">
                                             <p>Country : <span>Sri Lanka</span></p>
                                         </div>
-                                    </div>
+                                    </div>S
                                     <div class="row">
                                         <div class="buttons padd-15">
                                             <a href="" class="btn">Download</a>
-                                            <a href="" class="btn">Hire Me</a>
+                                            <a href="#contact" data-section-index="1" class="btn hire-me">hire-Me</a>
                                         </div>
                                     </div>
                                 </div>
