web profile update 7

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
 
     <div class="preloader">
-        <h1>LORDING...</h1>
         <div class="loader">
         </div>
     </div>
@@ -33,9 +32,6 @@
                     <li><a href="#project"><i class="fa fa-briefcase"></i>&nbsp; Project</a></li>
                     <li><a href="#contact"><i class="fa fa-comments"></i>&nbsp; Contact</a></li>
                 </ul>
-                <!--            <div class="copyright-text">-->
-                <!--                2021 new Update-->
-                <!--            </div>-->
             </div>
         </div>
         <div class="main-content">
@@ -46,10 +42,10 @@
                         <h1>Tharindu Dilshan</h1>
                         <p>Web & DEVELOPER</p>
                         <div class="social-links">
-                            <a href=""><i class="fa fa-facebook"></i></a>
-                            <a href=""><i class="fa fa-git"></i></a>
-                            <a href=""><i class="fa fa-instagram"></i></a>
-                            <a href=""><i class="fa fa-linkedin"></i></a>
+                            <a href="https://www.facebook.com/tharindu.gamage.7505/"><i class="fa fa-facebook"></i></a>
+                            <a href="https://github.com/TharinduUdumalagala"><i class="fa fa-git"></i></a>
+                            <a href="https://instagram.com/t_harind_u__d_ilsha_n?r=nametag"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/tharindu-dilshan-b943501bb/"><i class="fa fa-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
@@ -97,7 +93,7 @@
                                         <div class="info-item padd-15">
                                             <p>Country : <span>Sri Lanka</span></p>
                                         </div>
-                                    </div>S
+                                    </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
                                             <a href="" class="btn">Download</a>
